--- a/index.html
+++ b/index.html
@@ -111,35 +111,19 @@
         font-size: 24px;
         color: #FF9999;
     }
-    .toggle-div {
+    #mobile-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: black;
+        color: white;
         display: none;
-        width: 400px;
-    }
-    .profile {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
+        justify-content: center;
         align-items: center;
-    }
-    .profile img {
-        border-radius: 50%;
-        border: solid;
-        border-width: 1px;
-        height: 200px;
-        width: 200px;
-    }
-    .profile p {
-        font-size: 22px;
-        text-align: center;
-        color: #FFFFFFB3;
-        margin: 20px 0 0;
-    }
-    .profile hr {
-        width: 100%;
-        height: 2.5px;
-        border: none;
-        background: linear-gradient(to right, rgba(255, 0, 0, 0), darkred, rgba(255, 0, 0, 0));
-        margin: 5px 0 0;
+        font-size: 24px;
+        z-index: 1000;
     }
     @font-face {
         font-family: 'Crusades';
@@ -147,15 +131,16 @@
     }
     @keyframes fadeOut {
         from {
-            opacity: 1; /* Start with full opacity */
+            opacity: 1;
         }
         to {
-            opacity: 0; /* Fade out to fully transparent */
+            opacity: 0;
         }
     }
 </style>
 </head>
 <body>
+<div id="mobile-overlay">Sorry, we aren't mobile responsive yet.</div>
 <div id="overlay">
     <div class="content">
         <p>Click to continue</p>
@@ -175,7 +160,7 @@
         <p><span id="cross">+</span>&nbsp;&nbsp;In the shadows of history, a conflict of wits and whispers unfolded, veiled in secrecy and mystique. Minds clashed in unseen battles, with both noble and malevolent forces leaving indelible marks. We honor those who played this enigmatic game. Godspeed.</p>
     </div>
     <div class="links">
-        <h2><span id="cross">+</span>&nbsp; <a href="https://t.me/insert" target="_blank">Join Our Channel</a> &nbsp;<span id="cross">+</span></h2>
+        <h2><span id="cross">+</span>&nbsp; <a href="https://t.me/hapyspeaks" target="_blank">Join Our Channel</a> &nbsp;<span id="cross">+</span></h2>
     </div>
     <div class="divider">
         <span style="font-family: 'Crusades', sans-serif; color: darkred; font-size: 40px; font-weight: 600;">+</span>
@@ -185,30 +170,9 @@
         <span style="font-family: 'Crusades', sans-serif; color: darkred; font-size: 40px; font-weight: 600;">+</span>
     </div>
     <div class="members">
-        <p><span class="toggle-word">Hapy</span> &nbsp;<span id="cross">+</span>&nbsp; Owner &nbsp;<span id="cross">+</span>&nbsp; <a href="https://t.me/zhapyz" target="_blank">t.me/zhapyz</a><br></p>
-        <p><span class="toggle-word">Pilot</span> &nbsp;<span id="cross">+</span>&nbsp; Member &nbsp;<span id="cross">+</span>&nbsp; <a href="https://t.me/ghostaliases" target="_blank">t.me/ghostaliases</a><br></p>
-        <p><span class="toggle-word">Omen</span> &nbsp;<span id="cross">+</span>&nbsp; Member &nbsp;<span id="cross">+</span>&nbsp; <a href="https://t.me/a407c5a0edd2b150853cffcc6237952" target="_blank">t.me/a407c5a0ed...</a><br></p>
-    </div>
-    <div class="toggle-div">
-        <div class="profile">
-            <img src="hapy pfp.jpg">
-            <p>Godspeed.</p>
-            <hr>
-        </div>
-    </div>
-    <div class="toggle-div">
-        <div class="profile">
-            <img src="pilot pfp.jpg">
-            <p>...</p>
-            <hr>
-        </div>
-    </div>
-    <div class="toggle-div">
-        <div class="profile">
-            <img src="omen pfp.jpg">
-            <p>Fucker</p>
-            <hr>
-        </div>
+        <p>Hapy &nbsp;<span id="cross">+</span>&nbsp; Owner &nbsp;<span id="cross">+</span>&nbsp; <a href="https://t.me/zhapyz" target="_blank">t.me/zhapyz</a><br></p>
+        <p>Pilot &nbsp;<span id="cross">+</span>&nbsp; Member &nbsp;<span id="cross">+</span>&nbsp; <a href="https://t.me/ghostaliases" target="_blank">t.me/ghostaliases</a><br></p>
+        <p>Omen &nbsp;<span id="cross">+</span>&nbsp; Member &nbsp;<span id="cross">+</span>&nbsp; <a href="https://t.me/a407c5a0edd2b150853cffcc6237952" target="_blank">t.me/a407c5a0ed...</a><br></p>
     </div>
 </div>
 <script>
@@ -216,32 +180,25 @@
     var overlay = document.getElementById('overlay');
     var audio = document.getElementById('audio');
 
-    // Click event listener to hide the overlay and play the audio
     overlay.addEventListener('click', function() {
         overlay.style.animation = 'fadeOut 1s forwards';
         setTimeout(function() {
-        overlay.style.display = 'none'; // Hide the overlay
-        }, 500); // Adjust the time as needed to match your CSS transition duration
-        audio.play(); // Play the audio
+        overlay.style.display = 'none';
+        }, 500);
+        audio.play();
     });
     });
 
-    var toggleWords = document.querySelectorAll('.toggle-word');
-  
-    var toggleDivs = document.querySelectorAll('.toggle-div');
-  
-    toggleWords.forEach(function(toggleWord, index) {
-      toggleWord.addEventListener('click', function() {
-        if (toggleDivs[index].style.display === 'flex') {
-          toggleDivs[index].style.display = 'none';
-        } else {
-          toggleDivs.forEach(function(div) {
-            div.style.display = 'none';
-          });
-          toggleDivs[index].style.display = 'flex';
-        }
-      });
-    });
+    function checkDevice() {
+      if (window.innerWidth < 1024) {
+        document.getElementById('mobile-overlay').style.display = 'flex';
+      } else {
+        document.getElementById('mobile-overlay').style.display = 'none';
+      }
+    }
+
+    window.onload = checkDevice;
+    window.onresize = checkDevice;
   </script>
 </body>
-</html
+</html>
