--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
         <p>Hapy &nbsp;<span id="cross">+</span>&nbsp; Owner &nbsp;<span id="cross">+</span>&nbsp; <a href="https://t.me/zhapyz" target="_blank">t.me/zhapyz</a><br></p>
         <p>Pilot &nbsp;<span id="cross">+</span>&nbsp; Member &nbsp;<span id="cross">+</span>&nbsp; <a href="https://t.me/ghostaliases" target="_blank">t.me/ghostaliases</a><br></p>
         <p>Omen &nbsp;<span id="cross">+</span>&nbsp; Member &nbsp;<span id="cross">+</span>&nbsp; <a href="https://t.me/a407c5a0edd2b150853cffcc6237952" target="_blank">t.me/a407c5a0ed...</a><br></p>
+        <p>Knight &nbsp;<span id="cross">+</span>&nbsp; Member &nbsp;<span id="cross">+</span>&nbsp; <a href="https://t.me/prof_knight" target="_blank">t.me/prof_knight.</a><br></p>
     </div>
 </div>
 <script>
