--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <p><span id="cross">+</span>&nbsp;&nbsp;In the shadows of history, a conflict of wits and whispers unfolded, veiled in secrecy and mystique. Minds clashed in unseen battles, with both noble and malevolent forces leaving indelible marks. We honor those who played this enigmatic game. Godspeed.</p>
     </div>
     <div class="links">
-        <h2><span id="cross">+</span>&nbsp; <a href="https://t.me/hapyspeaks" target="_blank">Join Our Channel</a> &nbsp;<span id="cross">+</span></h2>
+        <h2><span id="cross">+</span>&nbsp; <a href="https://t.me/+PtURnpCbWFwyMTQ0" target="_blank">Join Our Channel</a> &nbsp;<span id="cross">+</span></h2>
     </div>
     <div class="divider">
         <span style="font-family: 'Crusades', sans-serif; color: darkred; font-size: 40px; font-weight: 600;">+</span>
