--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     .textbox {
         width: 700px;
         color: #FFFFFFB3;
-        font-size: 22px;
-        font-weight: 400;
+        font-size: 20px;
+        font-weight: 200;
         line-height: 30px;
         margin: 20px 0 20px;
     }
@@ -63,6 +63,7 @@
         text-decoration: none;
         color: #FFFFFFB3;
         font-weight: 600;
+        font-size: 22px;
     }
     .links a:hover {
         color: white;
@@ -71,8 +72,8 @@
         width: 700px;
         text-align: center;
         color: #FFFFFFB3;
-        font-size: 22px;
-        font-weight: 400;
+        font-size: 20px;
+        font-weight: 200;
         line-height: 30px;
         margin: 20px 0 20px;
     }
@@ -170,10 +171,11 @@
         <span style="font-family: 'Crusades', sans-serif; color: darkred; font-size: 40px; font-weight: 600;">+</span>
     </div>
     <div class="members">
-        <p>Hapy &nbsp;<span id="cross">+</span>&nbsp; Owner &nbsp;<span id="cross">+</span>&nbsp; <a href="https://t.me/zhapyz" target="_blank">t.me/zhapyz</a><br></p>
-        <p>Pilot &nbsp;<span id="cross">+</span>&nbsp; Member &nbsp;<span id="cross">+</span>&nbsp; <a href="https://t.me/ghostaliases" target="_blank">t.me/ghostaliases</a><br></p>
-        <p>Omen &nbsp;<span id="cross">+</span>&nbsp; Member &nbsp;<span id="cross">+</span>&nbsp; <a href="https://t.me/a407c5a0edd2b150853cffcc6237952" target="_blank">t.me/a407c5a0ed...</a><br></p>
-        <p>Knight &nbsp;<span id="cross">+</span>&nbsp; Member &nbsp;<span id="cross">+</span>&nbsp; <a href="https://t.me/prof_knight" target="_blank">t.me/prof_knight.</a><br></p>
+        <p><a href="https://t.me/zhapyz" target="_blank">Hapy</a> &nbsp;<span id="cross">+</span>&nbsp; Owner<br></p>
+        <p><a href="https://t.me/ghostaliases" target="_blank">Pilot</a> &nbsp;<span id="cross">+</span>&nbsp; Member<br></p>
+        <p><a href="https://t.me/a407c5a0edd2b150853cffcc6237952" target="_blank">Omen</a> &nbsp;<span id="cross">+</span>&nbsp; Member<br></p>
+        <p><a href="https://t.me/grievingalways" target="_blank">Grief</a> &nbsp;<span id="cross">+</span>&nbsp; Member<br></p>
+        <p><a href="https://t.me/prof_knight" target="_blank">Knight</a> &nbsp;<span id="cross">+</span>&nbsp; Member<br></p>
     </div>
 </div>
 <script>
