--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
         font-size: 200px;
         font-weight: 200;
         font-family: 'Crusades', sans-serif;
+        -webkit-animation: flicker 3s infinite;
+        z-index: -1;
     }
     .textbox {
         width: 700px;
@@ -137,6 +139,15 @@
         to {
             opacity: 0;
         }
+    }
+    @-webkit-keyframes flicker
+    {
+        0% {opacity:0;}
+        9% {opacity:0;}
+        10% {opacity:.5;}
+        13% {opacity:0;}
+        20% {opacity:.5;}
+        25% {opacity:1;}
     }
 </style>
 </head>
