--- a/index.html
+++ b/index.html
@@ -190,11 +190,10 @@
         <span style="font-family: 'Crusades', sans-serif; color: darkred; font-size: 40px; font-weight: 600;">+</span>
     </div>
     <div class="members">
-        <p><a href="https://t.me/zhapyz" target="_blank">Hapy</a> &nbsp;<span id="cross">+</span>&nbsp; Owner<br></p>
+        <p><a href="" target="_blank">Hapy</a> &nbsp;<span id="cross">+</span>&nbsp; Owner<br></p>
         <p><a href="https://t.me/ghostaliases" target="_blank">Pilot</a> &nbsp;<span id="cross">+</span>&nbsp; Member<br></p>
-        <p><a href="https://t.me/a407c5a0edd2b150853cffcc6237952" target="_blank">Omen</a> &nbsp;<span id="cross">+</span>&nbsp; Member<br></p>
         <p><a href="https://t.me/grievingalways" target="_blank">Grief</a> &nbsp;<span id="cross">+</span>&nbsp; Member<br></p>
-        <p><a href="https://t.me/prof_knight" target="_blank">Knight</a> &nbsp;<span id="cross">+</span>&nbsp; Member<br></p>
+        <p><a href="https://t.me/ecl1spe" target="_blank">Eclipse</a> &nbsp;<span id="cross">+</span>&nbsp; Member<br></p>
     </div>
 </div>
 <script>
