--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <span style="font-family: 'Crusades', sans-serif; color: darkred; font-size: 40px; font-weight: 600;">+</span>
     </div>
     <div class="members">
-        <p><a href="" target="_blank">Hapy</a> &nbsp;<span id="cross">+</span>&nbsp; Owner<br></p>
+        <p><a href="https://t.me/deehapy" target="_blank">Hapy</a> &nbsp;<span id="cross">+</span>&nbsp; Owner<br></p>
         <p><a href="https://t.me/ghostaliases" target="_blank">Pilot</a> &nbsp;<span id="cross">+</span>&nbsp; Member<br></p>
         <p><a href="https://t.me/grievingalways" target="_blank">Grief</a> &nbsp;<span id="cross">+</span>&nbsp; Member<br></p>
         <p><a href="https://t.me/ecl1spe" target="_blank">Eclipse</a> &nbsp;<span id="cross">+</span>&nbsp; Member<br></p>
